<resources>
    <string name="app_name">TreePLE</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="maps_button">Go to Map</string>
    <string name="title_activity_register">Sign up</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_account_exists">Account already exists</string>
    <string name="error_no_account">Login Error</string>
    <string name="prompt_height">Height (cm)</string>
    <string name="prompt_diameter">Diameter (cm)</string>
    <string name="prompt_date">YYYY-MM-DD</string>
    <string name="date_first">Select Date</string>
    <string name="date_label">Date Planted</string>
    <string name="prompt_land">Land Type</string>
    <string name="prompt_status">Status</string>
    <string name="prompt_ownership">Ownership</string>
    <string name="prompt_species">Species</string>
    <string name="tree_coords">coord_placeholder</string>
    <string name="tree_coords_prompt">Coordinates</string>
    <string name="species">Species</string>
    <string name="height">Height (cm)</string>
    <string name="diameter">Diameter (cm)</string>
    <string name="add_tree_button">Plant Tree</string>
    <string name="height_placeholder">height_placeholder</string>
    <string name="diameter_placeholder">diameter_placeholder</string>
    <string name="date_placeholder">date_placeholder</string>
    <string name="land_type_placeholder">land_type</string>
    <string name="status_placeholder">status</string>
    <string name="ownership_placeholder">ownership</string>
    <string name="species_placeholder">species</string>
    <string name="cut_down_button">Cut Down</string>
    <string name="municipality">Municipality</string>
    <string name="prompt_municipality">Enter municipality</string>
    <string name="municipality_placeholder">municipality</string>
    <string name="prompt_role">Role</string>
    <string name="prompt_address">Address</string>
    <string name="refresh_markers">Refresh</string>
    <string name="user_placeholder">User</string>
    <string name="backto_signin_button">Back to sign in</string>
    <string name="error_registration">Registration Error</string>
    <string name="treeID">Tree ID</string>
    <string name="treeID_placeholder">Tree ID</string>
    <string name="repassword_prompt">Re-enter Password</string>
    <string name="error_not_matching">Passwords do not match</string>
    <string name="error_no_address">Please enter an address</string>
    <string name="prompt_postal_code">Postal Code</string>
    <string name="error_no_postal">Enter a postal code</string>
    <string name="error_wrong_postal">Enter a valid postal code</string>
    <string name="action_goto_map">Goto Map(DEBUG)</string>
    <string name="update_placeholder">Check for updates</string>
    <string name="error_invalid_user">Invalid user</string>
    <string name="user_refresh">Get User</string>
    <string name="prompt_role_pass">Role Password</string>
    <string name="update_tree_button">Update Tree</string>
    <string name="reset_password">Change Password</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_new_pass_reentry">Reenter New Password</string>
    <string name="title_reset_pass">Change Password</string>
    <string name="logout_button">Logout</string>
    <string name="create_species">Create Species</string>
    <string name="species_name">Name</string>
    <string name="species_genus">Genus</string>
    <string name="species_species">Species</string>
    <string name="add_species_button">Add Species</string>
    <string-array name="land_enum">
        <item>Park</item>
        <item>Residential</item>
        <item>Institutional</item>
        <item>Municipal</item>
    </string-array>
    <string-array name="status_enum">
        <item>Planted</item>
        <item>Diseased</item>
        <item>MarkedForCutdown</item>
        <item>Cutdown</item>
    </string-array>
    <string-array name="ownership_enum">
        <item>Private</item>
        <item>Public</item>
    </string-array>
    <string-array name="role_enum">
        <item>Resident</item>
        <item>Scientist</item>
    </string-array>

</resources>
