<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_marker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/popupborder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height" />

        <EditText
            android:id="@+id/tree_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_height"
            android:textSize="12sp"
            android:inputType="number"
            android:layout_gravity="end"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diameter" />

        <EditText
            android:id="@+id/tree_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_diameter"
            android:textSize="12sp"
            android:layout_gravity="end"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label" />

        <TextView
            android:id="@+id/tree_date_planted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="showDatePickerDialog"
            android:text="@string/date_first" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_land" />

        <Spinner
            android:id="@+id/land_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_status" />

        <Spinner
            android:id="@+id/status_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_ownership" />

        <Spinner
            android:id="@+id/ownership_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species" />

        <EditText
            android:id="@+id/tree_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_species"
            android:textSize="12sp"
            android:inputType="text"
            android:maxLines="1"
            android:layout_gravity="end"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tree_coords_prompt" />

        <TextView
            android:id="@+id/tree_coords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/tree_coords" />

        <Button
            android:id="@+id/add_tree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_tree_button"
            android:background="@drawable/button_bg_rounded_corners"
            android:layout_margin="10dp"
            android:onClick="plantTree"/>

    </LinearLayout>

</RelativeLayout>