<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    tools:context="ca.mcgill.ecse321.treeple.ResetPasswordActivity">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_placeholder"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_old_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_new_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/new_pass_reentry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_new_pass_reentry"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"/>

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:alpha="0.8"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="@string/reset_password"/>

    <Button
        android:id="@+id/backto_signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:alpha="0.8"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="@string/backto_signin_button"/>

</LinearLayout>